[gd_scene load_steps=18 format=3 uid="uid://duhk2j6wdwy28"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_uoewy"]
[ext_resource type="Texture2D" uid="uid://sxd0davirioy" path="res://galaxy_defiance_resources/assets/ship.png" id="1_vh8pt"]
[ext_resource type="Script" path="res://galaxy_defiance_resources/components/move_component.gd" id="2_3qqj0"]
[ext_resource type="Script" path="res://galaxy_defiance_resources/components/move_input_component.gd" id="3_aro7v"]
[ext_resource type="Resource" uid="uid://krh6bet0giun" path="res://player_ship/ship_move_stats.tres" id="4_xi5tq"]
[ext_resource type="Script" path="res://galaxy_defiance_resources/components/position_clamp_component.gd" id="5_q3plo"]
[ext_resource type="Script" path="res://galaxy_defiance_resources/components/spawner_component.gd" id="7_u1txh"]
[ext_resource type="PackedScene" uid="uid://b8cp1iekafdru" path="res://projectiles/laser.tscn" id="8_xxmea"]
[ext_resource type="Script" path="res://galaxy_defiance_resources/components/scale_component.gd" id="9_fq2p0"]
[ext_resource type="Texture2D" uid="uid://cgk4yus1kiob0" path="res://galaxy_defiance_resources/assets/ship_flame.png" id="10_etfry"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fubyt"]
atlas = ExtResource("10_etfry")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdn1r"]
atlas = ExtResource("10_etfry")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3n3v2"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fubyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdn1r")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w01rg"]
atlas = ExtResource("1_vh8pt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc1jp"]
atlas = ExtResource("1_vh8pt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkqvp"]
atlas = ExtResource("1_vh8pt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_30r7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w01rg")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc1jp")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkqvp")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_uoewy")

[node name="Anchor" type="Node2D" parent="."]

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 16)
sprite_frames = SubResource("SpriteFrames_3n3v2")
animation = &"new_animation"
autoplay = "new_animation"
frame = 1
frame_progress = 0.617925

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_30r7y")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_3qqj0")
actor = NodePath("..")
velocity = Vector2(0, -50)

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_aro7v")
move_stats = ExtResource("4_xi5tq")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_q3plo")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_u1txh")
scene = ExtResource("8_xxmea")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_fq2p0")
sprite = NodePath("../Anchor")
